# claude-agent-sdk-demo

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
.claude/: launch.json
agent/: __init__.py  code_gen_agent.py  executor.py  security.py
docs/: permissions-and-tool-control.md
scenarios/: __init__.py  runner.py
scenarios/safe/: __init__.py  data_summary.py  profit_loss.py
scenarios/sample_data/: accounting_rules.txt  malicious_data.csv  sales_data.csv  transactions.csv
scenarios/unsafe/: __init__.py  cpu_abuse.py  file_injection.py  introspection.py  memory_abuse.py  token_exhaustion.py  tool_abuse.py
